Updated text content

--- a/contact.html
+++ b/contact.html
@@ -97,7 +97,7 @@
                             <div class="contact-text">
                                 <a href="" class="contact-header">Ibadan, Nigeria</a>
                                 <p>
-                                    That's my current location. I stay here for studies and for other 
+                                    This is my current location. I stay here for studies and for other 
                                     activities.
                                 </p>
                             </div>
