--- a/index.html
+++ b/index.html
@@ -80,9 +80,10 @@
                             <h1>Promise Sheggsmann</h1>
                             <p class="home-text-about">
                                 Hi I'm Promise, a profilic and self-motivated Software Engineer based in Nigeria.
-                                I have a passion for metrics and I love to develop highly optimized and scalable solutions using modern technologies. 
-                                My biggest priority everyday is to be better than I was the previous day, then use this drive
-                                to tackle more problems and endorse technolgies into every business and area it is applicable.
+                                My Instinct curiosity and passion for software has lead me into learning and designing
+                                solutions to solve various business and societal problems.
+                                I specialize in building exceptional digital experiences for the web, mobile and
+                                desktop platforms.
                             </p>
                             <div class="home-buttons">
                                 <a href="/portfolio.html" class="btn btn-1">My Portfolio</a>
@@ -116,8 +117,8 @@
                             <div class="what-i-do-text">
                                 <h3>Website Development</h3>
                                 <p>
-                                    I develop highly optimized, scalable and elegant websites using modern technologies, which
-                                    means, your websites would definitley stand out from the crowd.
+                                    I develop highly optimized, scalable and purpose-served web solutions using modern cutting-edge technologies, ranging from 
+                                    from E-commerce, web apps to simple personal portfolios.
                                 </p>
                             </div>
                         </div>
@@ -131,8 +132,9 @@
                             <div class="what-i-do-text">
                                 <h3>Mobile Development</h3>
                                 <p>
-                                    In need of a cross-platform mobile app (Android/IOS) for your startup, business or an idea, I have just
-                                    the right skills to move your project from concept to reality.
+                                    Mobile apps seems to be the biggest source of traction to digital solutions, and
+                                    with my expertise, I can develop modern mobile solutions that provide
+                                    coherent user experiences across Apples IOS and Googles Android platforms.
                                 </p>
                             </div>
                         </div>
@@ -147,10 +149,10 @@
                                 <i class="li_shop"></i>
                             </div>
                             <div class="what-i-do-text">
-                                <h3>Ecommerce</h3>
+                                <h3>Desktop Applications</h3>
                                 <p>
-                                    Are you considering expanding your store business and stretching it's limits? an e-commerce website is exactly what you 
-                                    need and you've got the right person to deliver one.
+                                    Using technologies that abstract the web environment to a native desktop environment,
+                                    I can develop immersive and efficient desktop experiences that meets your company's requirements.
                                 </p>
                             </div>
                         </div>
@@ -164,9 +166,10 @@
                             <div class="what-i-do-text">
                                 <h3>Automation & Scripting</h3>
                                 <p>
-                                    Yeah, you read it right. Probably you have a very boring or lengthy job that has
-                                    to be done with a computer and you don't have the time for that, you can try automating
-                                    the process by hiring me.
+                                    Having my core foundation with the Python programming language, 
+                                    I design and implement scripts that automate lots of boring tasks
+                                    from renaming bulk files to cropping passport-sized images from half-length
+                                    student portraits.
                                 </p>
                             </div>
                         </div>
@@ -276,7 +279,7 @@
                 <div class="fun-fact-item">
                     <i class="li_clock"></i>
                     <h3>Working Hours</h3>
-                    <span>2,400</span>
+                    <span>1,050</span>
                 </div>
 
                 <div class="fun-fact-item">
