--- a/portfolio.html
+++ b/portfolio.html
@@ -147,7 +147,7 @@
                         <p class="p-description">
                             Multi-featured communications web and desktop application built with 
                             security in mind.
-                            Includes end-to-end encryption of data, video call, voice chat, calls etc.
+                            Includes end-to-end encryption of data, video call, voice chat etc.
                         </p>
                     </div>
 
@@ -394,8 +394,8 @@
                     <div class="portfolio-content">
                         <h2 class="p-title">YoutubeSearch</h2>
                         <p class="p-description">
-                            A web application that extends the searching features of Youtube.
-                            It includes features to filter videos by subscribers count, number of likes and so on.
+                            A web application that extends Youtube's search feature, with the ability to 
+                            filter videos by subscribers count, number of likes and similar queries.
                         </p>
                     </div>
 
@@ -446,7 +446,7 @@
                         <h2 class="p-title">TSX Quiz Input</h2>
                         <p class="p-description">
                             Very similar to excel in concept, This application was built
-                            as a tool to help teachers prepare examination questions faster.
+                            as a tool to help teachers prepare examination and test questions faster.
                         </p>
                     </div>
 
@@ -589,8 +589,7 @@
                     <div class="portfolio-content">
                         <h2 class="p-title">Course Landing</h2>
                         <p class="p-description">
-                            My personal course landing page used to advertise and sell my course one I was about to 
-                            launch one.
+                            Demo course landing page used to create awareness of my upcoming Python class.
                         </p>
                     </div>
 
