--- a/resume.html
+++ b/resume.html
@@ -121,18 +121,18 @@
                                 <p class="place">Marist Brother's Juniorate</p>
                                 <h3>Software Developer</h3>
                                 <p>
-                                    Designed and developed various educational applications which improved overall student's
-                                    performance by 44%. The most effective academic investment the school had made in a long run.
+                                    Designed and developed various educational applications that improved overall student's
+                                    performance by 44%. The most effective academic investment the school had made in a decade.
                                 </p>
                             </div>
                             
                             <div class="experience-item">
                                 <span class="year">2020 - 2021</span>
                                 <p class="place">Lead City University</p>
-                                <h3>Software Engineer</h3>
+                                <h3>Backend Engineer</h3>
                                 <p>
-                                    Lead a team of 4 developers to design and develop
-                                    a highly scalable photo-sharing platform for data research.
+                                    Collaborated with a team of 4 developers to architect and implement
+                                    a very efficient and scalable photo-sharing application for an AI project.
                                 </p>
                             </div>
 
