--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Promise Sheggsmann is a prolific and well-qualified Full-Stack Develeoper, highly skilled at web and software development.">
+    <meta name="description" content="Promise Sheggsmann is a prolific and well-qualified Full-Stack Software Engineer, specialized in developing amazing digital experiences for the web, mobile and desktop platforms.">
     <meta name="keywords" content="Promise, Promise Sheggsmann, Sheggsmann, Full-Stack Developer, Web Developer, Python Developer, 
     JavaScript Developer, Mobile Developer, Developer, Nigeria Developers, Website Developer
     React Native Developer, Freelancer, Nigeria Freelancers">
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="css/linecons.css">
     <link rel="stylesheet" href="css/utilities.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="shortcut icon" href="logo.png" type="image/x-icon">
 </head>
 <body>
     
@@ -226,7 +227,7 @@
                 <div class="testimonial-item">
                   <i class="fa fa-quote-right" aria-hidden="true"></i>
                   <div class="testimonial-img">
-                      <img src="./img/testimonial/3.jpg" alt="">
+                      <img src="./img/testimonial/stacyuk.jpg" alt="">
                   </div>
                   <p>
                       I never knew the hidden potentials of my business until I got an e-commerce website
@@ -241,7 +242,7 @@
                 <div class="testimonial-item">
                   <i class="fa fa-quote-right" aria-hidden="true"></i>
                   <div class="testimonial-img">
-                      <img src="./img/testimonial/4.jpg" alt="">
+                      <img src="./img/testimonial/mrs.afe.jpg" alt="">
                   </div>
                   <p>
                       Being his coach and later his employer, Promise is very skilled and equipped with a very
@@ -249,8 +250,8 @@
                       <!-- Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit 
                       ducimus incidunt totam dolorum, nulla iusto! -->
                   </p>
-                  <h3>Brother Sam.</h3>
-                  <span>MBJ</span>
+                  <h3>Mrs Afe.</h3>
+                  <span>Lead City</span>
                 </div>
                 
               </div>
