--- a/portfolio.html
+++ b/portfolio.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="css/utilities.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/portfolio.css">
+    <link rel="shortcut icon" href="logo.png" type="image/x-icon">
 </head>
 </head>
 <body>
