--- a/resume.html
+++ b/resume.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="css/utilities.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/resume.css">
+    <link rel="shortcut icon" href="logo.png" type="image/x-icon">
 </head>
 </head>
 <body>
