--- a/resume.html
+++ b/resume.html
@@ -200,8 +200,7 @@
                         <ul class="skills-list">
                             <li>Python</li>
                             <li>JavaScript</li>
-                            <li>Express</li>
-                            <li>Django</li>
+                            <li>Express JS</li>
                             <li>Flask</li>
                             <li>React</li>
                             <li>React Native</li>
