--- a/resume.html
+++ b/resume.html
@@ -214,6 +214,7 @@
                         <h2>Software Engineering</h2>
                     </div>
                     <ul class="skills-list">
+                        <li>Problem Solving</li>
                         <li>Git</li>
                         <li>Google Cloud Platform</li>
                         <li>Firebase</li>
