--- a/index.html
+++ b/index.html
@@ -88,9 +88,9 @@
                 <span class="ml12">Full-Stack Software Engineer</span>
                 <h1>Promise Sheggsmann</h1>
                 <p class="home-text-about">
-                  Hi I'm Promise, a profilic and self-motivated Software
+                  Hi I'm Promise, a prolific and self-motivated Software
                   Engineer based in Nigeria. My Instinct curiosity and passion
-                  for software has lead me into learning and designing solutions
+                  for software has led me into learning and designing solutions,
                   to solve various business and societal problems. I specialize
                   in building exceptional digital experiences for the web,
                   mobile and desktop platforms.
@@ -211,8 +211,6 @@
               Sheggs is a very excellent and professional programmer. He
               delivered my project, met all my expectations, and even made
               personal contributions to my project.
-              <!-- Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit 
-                      ducimus incidunt totam dolorum, nulla iusto! -->
             </p>
             <h3>Matsuda Tomo</h3>
             <span>Upwork</span>
@@ -227,8 +225,6 @@
               I didn't know exactly what I wanted, but this developer kinda read
               my mind. I loved his work, his spirit and ..., I would definitely
               work with him again.
-              <!-- Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit 
-                      ducimus incidunt totam dolorum, nulla iusto! -->
             </p>
             <h3>Devneel Vaidya</h3>
             <span>Upwork</span>
@@ -243,8 +239,6 @@
               I never knew the hidden potentials of my business until I got an
               e-commerce website up and running from him. I simply recommend him
               to anyone
-              <!-- Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit 
-                      ducimus incidunt totam dolorum, nulla iusto! -->
             </p>
             <h3>Stacy UK</h3>
             <span>Fashion Model</span>
@@ -259,8 +253,6 @@
               Being his coach and later his employer, Promise is very skilled
               and equipped with a very nice personality. You would definitely
               love to work with him.
-              <!-- Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit 
-                      ducimus incidunt totam dolorum, nulla iusto! -->
             </p>
             <h3>Mrs Afe.</h3>
             <span>Lead City</span>
