Updated website and changes styling

--- a/index.html
+++ b/index.html
@@ -74,34 +74,34 @@
     <!-- Home Section -->
     <section class="home">
       <div class="container">
-        <div class="row align-items-center">
-          <div class="col-4">
-            <div class="home-img">
-              <div class="home-img-inner">
-                <img src="./img/sheggs.png" alt="Promise Sheggsmann" />
+        <div class="row align-items-center justify-content-center">
+          <!-- <div class="col-4"> -->
+          <!-- <div class="home-img"> -->
+          <!-- <div class="home-img-inner"> -->
+          <!-- <img src="./img/sheggs.png" alt="Promise Sheggsmann" /> -->
+          <!-- </div> -->
+          <!-- </div> -->
+          <!-- </div> -->
+          <!-- <div class="col-6"> -->
+          <div class="home-text">
+            <div class="home-text-inner">
+              <span class="ml12">Full-Stack Software Developer</span>
+              <h1>Promise Sheggsmann</h1>
+              <p class="home-text-about">
+                Hi I'm Promise, a prolific and self-motivated Full-Stack
+                developer. I specialize in building exceptional digital
+                experiences using the MERN stack. I am an avid problem solver,
+                active and futuristic about my solutions. I am a mix of business
+                and product, and really passionate about scaling systems to meet
+                never ending business demands.
+              </p>
+              <div class="home-buttons">
+                <a href="/portfolio.html" class="btn btn-1">My Portfolio</a>
+                <a href="/contact.html" class="btn btn-2">Hire Me</a>
               </div>
             </div>
           </div>
-          <div class="col-6">
-            <div class="home-text">
-              <div class="home-text-inner">
-                <span class="ml12">Full-Stack Software Engineer</span>
-                <h1>Promise Sheggsmann</h1>
-                <p class="home-text-about">
-                  Hi I'm Promise, a prolific and self-motivated Software
-                  Engineer based in Nigeria. My Instinct curiosity and passion
-                  for software has led me into learning and designing solutions,
-                  to solve various business and societal problems. I specialize
-                  in building exceptional digital experiences for the web,
-                  mobile and desktop platforms.
-                </p>
-                <div class="home-buttons">
-                  <a href="/portfolio.html" class="btn btn-1">My Portfolio</a>
-                  <a href="/contact.html" class="btn btn-2">Hire Me</a>
-                </div>
-              </div>
-            </div>
-          </div>
+          <!-- </div> -->
         </div>
       </div>
     </section>
