--- a/resume.html
+++ b/resume.html
@@ -125,11 +125,11 @@
                                 <p class="place">Traders Central (Canada)</p>
                                 <h3>Full Stack Engineer</h3>
                                 <p>
-                                    - Designed and developed scalable backend systems for realtime messaging application 
-                                    (similar to telegram) that handled thousands of requests per second.
+                                    - Designed and developed scalable backend systems for a realtime messaging application 
+                                    (similar to telegram) to handle tens of thousands of chat messages everyday.
                                     <br>
                                     - Demonstrated expertise in the micro-services architecture by successfully migrating the existing 
-                                    monolith to seperate services successfully.
+                                    monolith to seperate consistent services successfully.
                                    <br>
                                    - Documented all supported systems to effectively train new and existing team members
                                 </p>
@@ -232,6 +232,7 @@
                         <ul class="skills-list">
                             <li>Python</li>
                             <li>JavaScript</li>
+                            <li>TypeScript</li>
                             <li>Express JS</li>
                             <li>Flask</li>
                             <li>React</li>
