made portfolio changes

--- a/index.html
+++ b/index.html
@@ -85,15 +85,14 @@
           <!-- <div class="col-6"> -->
           <div class="home-text">
             <div class="home-text-inner">
-              <span class="ml12">Full-Stack Software Developer</span>
+              <span class="ml12">Full-Stack Software Engineer</span>
               <h1>Promise Sheggsmann</h1>
               <p class="home-text-about">
-                Hi I'm Promise, a prolific and self-motivated Full-Stack
-                developer. I specialize in building exceptional digital
-                experiences using the MERN stack. I am an avid problem solver,
-                active and futuristic about my solutions. I am a mix of business
-                and product, and really passionate about scaling systems to meet
-                never ending business demands.
+                Hi there, I'm Promise. As a passionate Full-Stack Engineer with a knack for creating exceptional digital experiences, I specialize in the MERN stack.
+                I thrive on solving complex problems and always aim to deliver forward-thinking solutions that not only meet but anticipate business needs.
+
+                With a unique blend of technical expertise and a strong business sense, I am driven by the challenge of scaling systems to keep pace with ever-evolving demands.
+                Welcome to my portfolio - I invite you to explore my work and see how I bring innovative ideas to life.
               </p>
               <div class="home-buttons">
                 <a href="/portfolio.html" class="btn btn-1">My Portfolio</a>
@@ -126,10 +125,8 @@
                 <div class="what-i-do-text">
                   <h3>Website Development</h3>
                   <p>
-                    I develop highly optimized, scalable and purpose-served web
-                    solutions using modern cutting-edge technologies, ranging
-                    from from E-commerce, web apps to simple personal
-                    portfolios.
+                    I craft highly optimized and scalable web solutions tailored to your needs, whether it's E-commerce platforms, dynamic web apps, or 
+                    sleek personal portfolios. Using the latest cutting-edge technologies, I ensure your website not only looks great but performs seamlessly.
                   </p>
                 </div>
               </div>
@@ -143,10 +140,9 @@
                 <div class="what-i-do-text">
                   <h3>Mobile Development</h3>
                   <p>
-                    Mobile apps seems to be the biggest source of traction to
-                    digital solutions, and with my expertise, I can develop
-                    modern mobile solutions that provide coherent user
-                    experiences across Apples IOS and Googles Android platforms.
+                    Mobile apps are the heartbeat of today's digital world. Leveraging my expertise, 
+                    I develop modern mobile solutions that offer smooth, cohesive user experiences across 
+                    both Apple's iOS and Google's Android platforms. Let's turn your mobile app vision into reality!
                   </p>
                 </div>
               </div>
@@ -162,7 +158,7 @@
                   <h3>Desktop Applications</h3>
                   <p>
                     Using technologies that abstract the web environment to a
-                    native desktop environment, I can develop immersive and
+                    native desktop environment, I develop immersive and
                     efficient desktop experiences that meets your company's
                     requirements.
                   </p>
@@ -178,10 +174,9 @@
                 <div class="what-i-do-text">
                   <h3>Automation & Scripting</h3>
                   <p>
-                    Having my core foundation with the Python programming
-                    language, I design and implement scripts that automate lots
-                    of boring tasks from renaming bulk files to cropping
-                    passport-sized images from half-length student portraits.
+                    With a strong foundation in Python, I design and implement scripts that 
+                    take the monotony out of your routine tasks. From renaming bulk files to 
+                    cropping passport-sized images from larger portraits, my automation solutions save you time and effort.
                   </p>
                 </div>
               </div>
@@ -263,7 +258,7 @@
     <!-- Testimonials Section End -->
 
     <!-- Fun Facts -->
-    <section class="fun-facts section-padding">
+    <!-- <section class="fun-facts section-padding">
       <div class="container">
         <div class="row">
           <div class="section-title">
@@ -297,7 +292,7 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
 
     <!-- Fun Facts -->
 
@@ -344,7 +339,7 @@
           </div>
 
           <div class="copy-right">
-            <p>&copy; 2022 All Rights Reserved</p>
+            <p>&copy; 2024 All Rights Reserved</p>
           </div>
         </div>
       </div>
